--- a/random/index.html
+++ b/random/index.html
@@ -47,7 +47,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <input id="start" placeholder="请输入起始范围"></input
+    <input id="start" placeholder="请输入起始范围"></input>
 	<input id="end" placeholder="请输入结束范围"></input>
     <div class="toolbar">
       <div class="btn" id="">生成</div>
