--- a/random/index.html
+++ b/random/index.html
@@ -50,7 +50,7 @@
     <input id="start" placeholder="请输入起始范围"></input>
 	<input id="end" placeholder="请输入结束范围"></input>
     <div class="toolbar">
-      <div class="btn" id="">生成</div>
+      <div class="btn" id="go">生成</div>
       <div class="btn" id="reset">重置</div>
     </div>
 	<h1 id = 'result'></h1>
