--- a/random/index.html
+++ b/random/index.html
@@ -53,7 +53,7 @@
       <div class="btn" id="go">生成</div>
       <div class="btn" id="reset">重置</div>
     </div>
-	<h1 id = 'result'></h1>
+	<h1 id="result"></h1>
   </div>
   <script src="./index.js"></script>
   <script>
