--- a/random/index.html
+++ b/random/index.html
@@ -47,13 +47,13 @@
 </head>
 <body>
   <div class="wrapper">
-    <input id="start" placeholder="请输入起始范围"></input>
-	<input id="end" placeholder="请输入结束范围"></input>
+    <input id="start" placeholder="请输入起始范围" align="center"></input>
+	<input id="end" placeholder="请输入结束范围" align="center"></input>
     <div class="toolbar">
       <div class="btn" id="go">生成</div>
       <div class="btn" id="reset">重置</div>
     </div>
-	<h1 id="result"></h1>
+	<h1 id="result" align="center"></h1>
   </div>
   <script src="./index.js"></script>
   <script>
