--- a/random/index.html
+++ b/random/index.html
@@ -47,8 +47,10 @@
 </head>
 <body>
   <div class="wrapper">
-    <input id="start" placeholder="请输入起始范围" align="center"></input>
-	<input id="end" placeholder="请输入结束范围" align="center"></input>
+   <div align="center">
+    <input id="start" placeholder="请输入起始范围" ></input>
+	<input id="end" placeholder="请输入结束范围"></input>
+   </div>
     <div class="toolbar">
       <div class="btn" id="go">生成</div>
       <div class="btn" id="reset">重置</div>
