--- a/random/index.html
+++ b/random/index.html
@@ -71,6 +71,8 @@
     }
     $reset.onclick = function() {
       $result.innerHTML="";
+	$start.placeholder = "请输入起始范围";
+	$end.placeholder="请输入结束范围";
     }
   </script>
 </body>
