--- a/random/index.html
+++ b/random/index.html
@@ -71,8 +71,8 @@
     }
     $reset.onclick = function() {
       $result.innerHTML="";
-	$start.placeholder = "请输入起始范围";
-	$end.placeholder="请输入结束范围";
+	$start.innerHTML = "";
+	$end.innerHTML="";
     }
   </script>
 </body>
