--- a/random/index.html
+++ b/random/index.html
@@ -71,8 +71,8 @@
     }
     $reset.onclick = function() {
       $result.innerHTML="";
-	$start.innerHTML = "";
-	$end.innerHTML="";
+	$start.value = "";
+	$end.value="";
     }
   </script>
 </body>
