--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
 <h>Hello, my friend.</h>
 
-<h1>嘿嘿</h1>
+<a href="https://huhuhuni.github.io/random/">随机数生成工具</a>
+<a href="https://huhuhuni.github.io/coder/">社会主义核心价值观编码器</a>
