--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 
 <h>Hello, my friend.</h>
+<div>
+    <a href="https://huhuhuni.github.io/random/">随机数生成工具</a> 
+</div>
+<div>
+    <a href="https://huhuhuni.github.io/coder/">社会主义核心价值观编码器</a>
+</div>
 
-<a href="https://huhuhuni.github.io/random/">随机数生成工具</a>
-<a href="https://huhuhuni.github.io/coder/">社会主义核心价值观编码器</a>
