--- a/index.html
+++ b/index.html
@@ -1,9 +1,24 @@
 
 <h>Hello, my friend.</h>
+<style type="text/css">
+    a {
+        color: aliceblue;
+        text-decoration : none;
+    }
+    .btn {
+      width: 19em;
+      line-height: 2em;
+      color: #fff;
+      text-align: center;
+      margin: 0 1em;
+      background: #d30606;
+      border-radius: 0.5em;
+    }
+</style>
 <div>
-    <a href="https://huhuhuni.github.io/random/">随机数生成工具</a> 
+    <button class="btn"><a href="https://huhuhuni.github.io/random/">随机数生成工具</a></button>
 </div>
 <div>
-    <a href="https://huhuhuni.github.io/coder/">社会主义核心价值观编码器</a>
+    <button class="btn"><a href="https://huhuhuni.github.io/coder/">社会主义核心价值观编码器</a></button>
 </div>
 
